--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 </section>
 
 <p class = "p_clients">
-    Here's the magority of esport 
+    Some of the content creators
     <br>
-    superstarts I had chance to work with 
+    I have had the chance to work with 
 </p>
 
 <h5 class = "contactmevia">Contact me via </h5>
@@ -187,7 +187,7 @@
 </section>
 
 <p class = "last_sentence">
-    Be my another thrilled client!
+    Become my next thrilled client!
 </p>
 
 <script src="js/script.js"></script>
