--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </section>
 
 <section class = "arrow">
-    <a href="#" class="arrow_down"></a>
+    <a href="#my_work" class="arrow_down"></a>
 </section>
 
 <h1 class="heading">My work</h1>
