--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Thomas</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link href="//db.onlinewebfonts.com/c/0be7748549934c0e481bdb7b8ba5270f?family=Gotham+Pro+Black" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
