--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link href="//db.onlinewebfonts.com/c/0be7748549934c0e481bdb7b8ba5270f?family=Gotham+Pro+Black" rel="stylesheet" type="text/css"/>
+    <link rel="preload" as="font" href="fonts/century-gothic.eot">
 
 </head>
 <body>
