--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="//db.onlinewebfonts.com/c/0be7748549934c0e481bdb7b8ba5270f?family=Gotham+Pro+Black" rel="stylesheet" type="text/css"/>
     <link rel="preload" as="font" href="fonts/century-gothic.eot">
+    <link href="http://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
 
 </head>
 <body>
