--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <header class="header">
     <a href="#" class="logo">
-        <img src="images_2/pfptom122.png" alt="">
+        <img src="images_2/pfptomnew.png" alt="">
     </a>
     <span></span>
     <nav class="navbar" id="navbar">
