--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel ="icon" href="images_2/pfptom122.png">
+    <link rel ="icon" href="images_2/pfptomnew.png">
     <style>
         body{
             background-image: url(images_2/fullHDbg.png);
