--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
 
 <section class = "logos" id="logos">
     <div>
-        <img src="/images_2/players_logos/thomashd.png" alt="">
-        <h2>Th0masHD</h2>
-        <div>119,000</div>
+        <img src="/images_2/players_logos/mongraal.png" alt="">
+        <h2>Mongraal</h2>
+        <div>4,600,000</div>
     </div>
 
     <div>
-        <img src="/images_2/players_logos/harmii.png" alt="">
-        <h2>Harmii</h2>
-        <div>183,000</div>
+        <img src="/images_2/players_logos/clix.png" alt="">
+        <h2>Clix</h2>
+        <div>1,920,000</div>
     </div>
 
     <div>
-        <img src="/images_2/players_logos/k1nzell.png" alt="">
-        <h2>K1nzell</h2>
-        <div>58,800</div>
+        <img src="/images_2/players_logos/benjy.png" alt="">
+        <h2>Benjyfishy</h2>
+        <div>1,700,000</div>
     </div>
 
     <div>
@@ -144,21 +144,21 @@
     </div>
 
     <div>
-        <img src="/images_2/players_logos/jynx.png" alt="">
-        <h2>Jynx</h2>
-        <div>73,300</div>
+        <img src="/images_2/players_logos/scoped.png" alt="">
+        <h2>Scoped</h2>
+        <div>562,000</div>
     </div>
 
     <div>
-        <img src="/images_2/players_logos/anas.png" alt="">
-        <h2>Anas</h2>
-        <div>69,200</div>
+        <img src="/images_2/players_logos/thomashd.png" alt="">
+        <h2>Th0masHD</h2>
+        <div>123,000</div>
     </div>
 
     <div>
-        <img src="/images_2/players_logos/joji.png" alt="">
-        <h2>JojiFN</h2>
-        <div>100,000</div>
+        <img src="/images_2/players_logos/harmii.png" alt="">
+        <h2>Harmii</h2>
+        <div>192,000</div>
     </div>
 </section>
 
