font_load_change

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link href="//db.onlinewebfonts.com/c/0be7748549934c0e481bdb7b8ba5270f?family=Gotham+Pro+Black" rel="stylesheet" type="text/css"/>
-    <link rel="preload" as="font" href="fonts/century-gothic.eot">
-    <link href="http://fonts.cdnfonts.com/css/century-gothic" rel="stylesheet">
+    <link href="https://drive.google.com/file/d/1vidXT1fK-XSqHpyvdnZ1nXUylKgBEAu2/view?usp=sharing" rel="stylesheet">
 
 </head>
 <body>
@@ -89,7 +88,7 @@
             <p>Here you can discover my fortnite
                 thumbnails and art I've been doing 
                 for over a year and half.</p>
-            <a class = "behanceimage" href="#" onclick= window.open("https://www.behance.net/thomasdesignes") ;return false;>
+            <a class = "behanceimage" window.location.href="https://www.behance.net/thomasdesignes" onclick= window.open("https://www.behance.net/thomasdesignes") ;return false;>
                 <img class = "behancepng"src="/images_2/behancethumb.png">
             </a>
         </div>
